Added fadeInOut animation to landing page with intersection observer and framer motion

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-intersection-observer": "^9.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
