--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
