--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uniqid": "^5.3.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-intersection-observer": "^9.4.0"
+    "react-intersection-observer": "^9.4.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
