--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@types/uniqid": "^5.3.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
@@ -16,6 +17,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-intersection-observer": "^9.4.0",
+    "react-redux": "^8.0.4",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
