--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,11 @@
 {
   "files.exclude": {
     ".next": true,
-    "node_modules": true,
     ".eslintrc.json": true,
-    ".gitignore": true,
     "package-lock.json": true,
     "postcss.config.js": true,
     "README.md": true,
     "styles": true,
-    "next-env.d.ts": true,
-    "next.config.js": true
+    "node_modules": true
   }
 }
