--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.1.0",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.4",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
