--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
