--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-headless-tabs": "^6.0.3",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.4",
     "uniqid": "^5.4.0",
