--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.4",
+    "react-to-print": "^2.14.10",
     "uniqid": "^5.4.0",
     "yup": "^0.32.11"
   },
