--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-headless-tabs": "^6.0.3",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.0",
