--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-  "name": "v2",
+  "name": "resumee",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.487.0",
-    "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/uniqid": "^5.3.2",
+    "@vercel/analytics": "^0.1.11",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
+    "moment": "^2.29.4",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-headless-tabs": "^6.0.3",
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.0",
+    "react-redux": "^8.0.4",
+    "react-to-print": "^2.14.10",
+    "uniqid": "^5.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "17.0.42",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
+    "typescript": "4.7.3"
   }
 }
